--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dry Fruits</title>
 
-    <link rel="stylesheet" href="../2/style.css" />
-    <link rel="stylesheet" href="../2/responsive.css" />
-    <link rel="stylesheet" href="../2/myjs.js" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="responsive.css" />
+    <link rel="stylesheet" href="myjs.js" />
 
     <link
       rel="stylesheet"
