--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     <header>
       <div class="logo">
         <img src="../2/img/logo.png" alt="" />
+        <img src="img/banner.png" alt="" />
       </div>
       <div class="category-scrh">
         <form action="">
@@ -224,7 +225,7 @@
       </div>
 
       <div class="product-info">
-        <img class="image1" src="../2/img/kishmish.png" alt="" />
+        <img class="image1" src="img/kishmish.png" alt="" />
         <div class="protext">
           <h1>Dates Benefits</h1>
           <p>
@@ -248,7 +249,7 @@
           </p>
           <a href="#">Read More</a>
         </div>
-        <img class="image2" src="../2/img/kishmish.png" alt="" />
+        <img class="image2" src="img/kishmish.png" alt="" />
       </div>
     </div>
     <div class="main-testiminial">
@@ -259,7 +260,7 @@
       <div class="testimonial">
         <div class="profile">
           <div class="person-info">
-            <img src="../2/img/p1.jpg" alt="" />
+            <img src="img/p1.jpg" alt="" />
             <div class="name">
               <h1>JENILIO DESOS</h1>
               <p>Customer</p>
@@ -277,7 +278,7 @@
 
         <div class="profile">
           <div class="person-info">
-            <img src="../2/img/p2.jpg" alt="" />
+            <img src="img/p2.jpg" alt="" />
             <div class="name">
               <h1>JENILIO DESOS</h1>
               <p>Customer</p>
